--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include DESCRIPTION
 include CHANGELOG.txt
 include README.md
+include requirements.txt
 graft copywriting
 global-exclude *.orig *.pyc *.log *.swp
 prune copywriting/tests/coverage
